<resources>
    <string name="app_name">共商联盟</string>
    <string name="account_number">帐号</string>
    <string name="accountdetails">账户明细</string>
    <string name="action_home">首页</string>
    <string name="action_message">消息</string>
    <string name="action_my_following">我的关注</string>
    <string name="action_search">搜索</string>
    <string name="action_share">分享</string>
    <string name="activityAccountBalance">账户余额</string>
    <string name="activityAddress">新增收货地址</string>
    <string name="activityAddressList">收货地址管理</string>
    <string name="activityBestTime">选择指定送货时间</string>
    <string name="activityCart">购物车</string>
    <string name="activityChangeNickName">修改昵称</string>
    <string name="activityChangeSex">修改性别</string>
    <string name="activityCheckout">确认订单</string>
    <string name="activityCollection">我的收藏</string>
    <string name="activityDetail">账户明细</string>
    <string name="activityGoodsList">商品列表</string>
    <string name="activityGroupBuy">限时抢购</string>
    <string name="activityGuide">引导</string>
    <string name="activityInventory">发票</string>
    <string name="activityInvoiceInfo">设置发票信息</string>
    <string name="activityShop">商品</string>
    <string name="activityOrderDetail">订单详情</string>
    <string name="certificationActivity">实名认证</string>
    <string name="activityOrderList">订单列表</string>
    <string name="activityOrderListFree">自由购订单</string>
    <string name="activityOrderReview">评价晒单</string>
    <string name="ReviewActivity">填写评价</string>
    <string name="activityPay">支付</string>
    <string name="activityRecharge">充值</string>
    <string name="activityResult">支付结果</string>
    <string name="activityReviewList">我的评价</string>
    <string name="activitySetUp">设置</string>
    <string name="activityShopStreet">店铺街</string>
    <string name="activityTencentQzoneShare">QQ空间分享</string>
    <string name="activityTencentShare">QQ 分享</string>
    <string name="activityUnionPay">银联支付</string>
    <string name="activityViewOriginalImage">查看原图</string>
    <string name="activityWeiBoShare">微博分享</string>
    <string name="activityWeiXinShare">微信分享</string>
    <string name="activityWithdrawal">申请提现</string>
    <string name="activityWithdrawalRecord">提现记录</string>
    <string name="activityEditPassword">设置登录密码</string>
    <string name="activitySelectShop">店铺选择</string>
    <string name="actualPayment">实付款</string>
    <string name="addShareOrderImg">添加晒单图片</string>
    <string name="addSlashEdit">添加/修改</string>
    <string name="Integral">我的积分</string>
    <string name="addTime">成交时间</string>
    <string name="add_comment">追加评价</string>
    <string name="add_to_cart">加入购物车</string>
    <string name="address">所在地区</string>
    <string name="haveReadAndAgreed">我已阅读并同意</string>
    <string name="agreement">共商联盟服务协议</string>
    <string name="userRegistrationProtocol">《共商联盟服务协议》</string>
    <string name="all">全部</string>
    <string name="allOrder">我的订单</string>
    <string name="toolbox">我的工具箱</string>
    <string name="myassets">我的资产</string>
    <string name="allProducts">全部商品</string>
    <string name="all_orders">全部</string>
    <string name="mall_orders">&#8194;&#8194;商城&#8194;&#8194;</string>
    <string name="city_wide_orders">同城生活</string>
    <string name="anonymousEvaluate">匿名评价</string>
    <string name="areYouSureToDeleteTheAddress">是否确认删除该地址?</string>
    <string name="articleListActivity">文章列表</string>
    <string name="availablebalance">账户可用余额(元)</string>
    <string name="awaitConfirm">待收货</string>
    <string name="awaitPay">待付款</string>
    <string name="toolPayment">付款</string>
    <string name="toolUserCard">会员卡</string>
    <string name="awaitReview">待评价</string>
    <string name="awaitShip">待发货</string>
    <string name="labelBalance">余额</string>
    <string name="binding_no_email_or_phone">没有绑定邮箱或手机号码</string>
    <string name="birthday">生日</string>
    <string name="myBonus">我的红包</string>
    <string name="addBonus">奖励</string>
    <string name="buttonAddAddress">新增收货地址</string>
    <string name="buttonBuyNow">立即购买</string>
    <string name="buttonCancel">取消</string>
    <string name="buttonGoToOrderList">查看订单</string>
    <string name="buttonGoToOrderListAndPay">去订单页支付</string>
    <string name="buttonPayRightNow">立即付款</string>
    <string name="buttonSaveAndUse">保存并使用</string>
    <string name="canNotAdd">宝贝不能购买更多</string>
    <string name="canNotReduce">宝贝不能再减少了</string>
    <string name="cancelOrder">取消订单</string>
    <string name="delOrder">删除订单</string>
    <string name="delayOrder">延迟收货</string>
    <string name="emptyCart">购物车空空的呢</string>
    <string name="emptyCartSubTitle">>再忙，也要记得买点东西犒赏自己~</string>
    <string name="checkAllOrder">查看全部订单</string>
    <string name="checkReviewSlashShow">查看评价/晒单</string>
    <string name="viewComment">已评价</string>
    <string name="goCheckout">去结算</string>
    <string name="goCheckoutFormat">去结算(%1$s)</string>
    <string name="checkoutFormat">结算(%1$s)</string>
    <string name="chooseCancleOrderReason">请选择取消订单的理由</string>
    <string name="chooseDelayOrderDays">延长确认收货时间</string>
    <string name="clear">清空</string>
    <string name="clearTheCache">清除缓存</string>
    <string name="clickToReceive">点击领取</string>
    <string name="close">关闭</string>
    <string name="collectNumber">关注人数</string>
    <string name="commentCount">宝贝评价(%1$s)</string>
    <string name="commonLogin">普通登录</string>
    <string name="composite">综合</string>
    <string name="confirm">确定</string>
    <string name="confirmOrder">确认收货</string>
    <string name="invite_group">邀请好友拼团</string>
    <string name="confirmTime">完结时间</string>
    <string name="confrimOrderTip">请您收到货后再点击“确定”,否则可能钱货两空！</string>
    <string name="consigneeAddress">收货地址</string>
    <string name="mySavingsCard">我的储值卡</string>
    <string name="myGiftCards">我的提货券</string>
    <string name="consigneeLabel">收货人:</string>
    <string name="copySuccess">复制成功</string>
    <string name="cropImage">剪裁</string>
    <string name="cropImageFailed">剪裁失败</string>
    <string name="customerService">客服</string>
    <string name="delete">删除</string>
    <string name="deleteCartGoodsAlert">>确认要删除选中的商品吗？</string>
    <string name="deliverySpeed">发货速度</string>
    <string name="delivery_to">送至</string>
    <string name="deliverytime">送货时间</string>
    <string name="description">描述相符</string>
    <string name="descriptionMessageIcon">消息图片</string>
    <string name="dynamicPasswordLogin">动态密码登录</string>
    <string name="dynamicPassword">动态密码</string>
    <string name="edit">编辑</string>
    <string name="emptyArguments">参数为空</string>
    <string name="emptyIndex">没有任何内容</string>
    <string name="emptyPassword">密码为空!</string>
    <string name="emptyShoppingCart">是否清空购物车？</string>
    <string name="msgDelOrder">您确定要删除该订单吗？</string>
    <string name="emptyInvalidGoods">您确定要清空失效商品吗？</string>
    <string name="emptyUserName">用户名为空！</string>
    <string name="emptyUrl">链接为空！</string>
    <string name="enterApp">进入应用</string>
    <string name="enterPassword">请输入密码</string>
    <string name="enterTheShop">进入店铺</string>
    <string name="enterUserName">手机/邮箱/用户名</string>
    <string name="enter_category">进入 %1$s</string>
    <string name="bonus">红包</string>
    <string name="labelRedPackage">红包</string>
    <string name="favourableComment">好评</string>
    <string name="filter">筛选</string>
    <string name="find_password">找回密码</string>
    <string name="finish">完成</string>
    <string name="formatBestTimeDate">%1$s(%2$s)</string>
    <string name="formatGoodsNumber">X%1$s</string>
    <string name="formatMoney">$%1$s</string>
    <string name="formatOrderMoney">$%1$s</string>
    <string name="formatUserMoney">$%1$s</string>
    <string name="registerSetPasswordTip">密码长度为6-20个字符，建议由字母、数字和符号两种以上</string>
    <string name="gift">赠品</string>
    <string name="giveFiveStar">满意请给5星哦</string>
    <string name="goLogin">去登录</string>
    <string name="goShopping">去购物</string>
    <string name="recommend_shop">推荐开店</string>
    <string name="goToTop">返回顶部</string>
    <string name="goods">商品</string>
    <string name="goodsAttr">规格参数</string>
    <string name="emptyGoodsAttr">商品暂无规格参数</string>
    <string name="emptyGoodsDesc">商品暂无详情描述</string>
    <string name="goodsCollection">商品</string>
    <string name="goodsCollectionFormat">商品(%1$s)</string>
    <string name="goodsCollectionShopCollection">商品收藏/店铺收藏</string>
    <string name="goodsDesc">图文详情</string>
    <string name="grabAtOnce">马上抢</string>
    <string name="grab_bonus">领红包</string>
    <string name="groupBuy">团购</string>
    <string name="groupBuyLeftTime">距结束仅剩</string>
    <string name="guess_you_like">猜你喜欢</string>
    <string name="have_selected">已选</string>
    <string name="hintBonusAdd">请输入线下获取的红包号</string>
    <string name="hintEnter">请输入</string>
    <string name="hintEnterBalance">输入余额</string>
    <string name="hintEnterCompanyName">请输入单位名称</string>
    <string name="hintEnterInvTaxpayers">纳税人识别号</string>
    <string name="hintEnterConsignee">请输入收货人</string>
    <string name="hintEnterDetail">如街道、楼层、门牌号等</string>
    <string name="hintEnterGoodsName">搜索该分类下商品</string>
    <string name="hintEnterMobile">请输入手机号</string>
    <string name="hintMaximumPrice">最高价</string>
    <string name="hintMinimumPrice">最低价</string>
    <string name="hintPleaseEnterMoney">请输入充值金额</string>
    <string name="hintPostscript">选填，可填写您与卖家达成一致的要求</string>
    <string name="hintEnterEvaluate">写下购买体会和使用感受来帮助其他小伙伴</string>
    <string name="hintEnterEvaluated">请输入追加评价内容...</string>
    <string name="income">收入</string>
    <string name="invoiceCompany">单位</string>
    <string name="invoiceContent">发票内容</string>
    <string name="invoiceIndividual">个人</string>
    <string name="invoiceTitle">发票抬头</string>
    <string name="invoiceType">发票类型</string>
    <string name="invoiceMail">收票邮箱</string>
    <string name="labelAddressDetail">详细地址:</string>
    <string name="labelAddressDetailComplete">完成</string>
    <string name="labelAddressRegion">所在地区:</string>
    <string name="labelConsignee">收货人:</string>
    <string name="labelCurrentAvailableBalance">账户余额 共</string>
    <string name="labelMobile">手机号:</string>
    <string name="labelOrderAmount">共计支付:</string>
    <string name="labelOrderMoney">订单金额:</string>
    <string name="labelOrderSn">交易单号:</string>
    <string name="labelPayByBalance">使用余额支付 : </string>
    <string name="postscript">买家留言：</string>
    <string name="labelSale">销量</string>
    <string name="labelSelected">已选：</string>
    <string name="labelShop">店铺:</string>
    <string name="labelShopTotalPrice">店铺合计(含运费)：</string>
    <string name="labelStock">库存:</string>
    <string name="moderateComment">中评</string>
    <string name="negativeComment">差评</string>
    <string name="emptyOrderListTitle">一个订单都没有哦</string>
    <string name="emptyReviewListTitle">评价空空如也</string>
    <string name="emptyReviewListSubtitle">期待您的购买与评论~</string>
    <string name="orderSn">订单编号</string>
    <string name="payTime">付款时间</string>
    <string name="placeholderBalanceFormat">$0</string>
    <string name="placeholderUserMoney">¥ 0</string>
    <string name="pleaseSelectPaymentFromBelow">请选择以下支付方式支付</string>
    <string name="shippingTime">发货时间</string>
    <string name="symbolMinus">-</string>
    <string name="tabCart">购物车</string>
    <string name="tabCategory">分类</string>
    <string name="tabUser">我的</string>
    <string name="unitDollar">元</string>
    <string name="message">消息</string>
    <string name="forgetPassword">忘记密码？</string>
    <string name="phoneRegistered">手机号码已注册，请直接登录</string>
    <string name="dial">拨打</string>
    <string name="invoiceInfo">发票信息</string>
    <string name="paySn">交易号</string>
    <string name="sendMessage">发信息</string>
    <string name="copy">复制</string>
    <string name="addContact">加为联系人</string>
    <string name="restAmount">剩余应付金额</string>
    <string name="distribAlready">已分成</string>
    <string name="distribCancel">取消分成</string>
    <string name="distribUnalready">待分成</string>
</resources>