<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@mipmap/btn_more_dark"
        android:title="更多"
        app:showAsAction="ifRoom"
        >
        <menu>
            <group>
                <item
                    android:id="@+id/activity_base_homeMenu"
                    android:icon="@mipmap/ic_menu_home"

                    android:showAsAction="never"
                    android:title="@string/action_home"
                    />

                <item
                    android:id="@+id/activity_base_categoryMenu"
                    android:icon="@mipmap/ic_menu_category"
                    android:showAsAction="never"
                    android:title="@string/tabCategory"
                    />

                <item
                    android:id="@+id/activity_base_messageMenu"
                    android:icon="@mipmap/ic_menu_message"
                    android:showAsAction="never"
                    android:title="@string/message"
                    />

                <item
                    android:id="@+id/activity_base_searchMenu"
                    android:icon="@mipmap/ic_menu_search"
                    android:showAsAction="never"
                    android:title="@string/action_search"
                    />

                <item
                    android:id="@+id/activity_base_cartMenu"
                    android:icon="@mipmap/ic_menu_cart"
                    android:showAsAction="never"
                    android:title="@string/tabCart"
                    />

                <item
                    android:id="@+id/activity_base_userMenu"
                    android:icon="@mipmap/ic_menu_user"
                    android:showAsAction="never"
                    android:title="@string/tabUser"
                    />
            </group>
        </menu>
    </item>
</menu>
