<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/top_bottom_border_one"
    android:orientation="vertical"
    android:paddingBottom="15dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="15dp">

    <LinearLayout
        android:id="@+id/fragment_order_detail_order_sn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/fragment_order_detail_order_sn_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/orderSn"
            android:textColor="@color/colorGoodsDesc"
            android:textSize="@dimen/fontFour"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/fragment_order_detail_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="复制"
            android:background="@drawable/gray_border_button_four"
            android:textSize="@dimen/fontFive"
            android:padding="3dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/fragment_order_detail_pay_sn_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paySn"
        android:textColor="@color/colorGoodsDesc"
        android:textSize="@dimen/fontFour"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/fragment_order_detail_add_time_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/addTime"
        android:textColor="@color/colorGoodsDesc"
        android:textSize="@dimen/fontFour" />

    <TextView
        android:id="@+id/fragment_order_detail_pay_time_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/payTime"
        android:textColor="@color/colorGoodsDesc"
        android:textSize="@dimen/fontFour" />

    <TextView
        android:id="@+id/fragment_order_detail_voucher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text=""
        android:visibility="gone"
        android:textColor="@color/colorGoodsDesc"
        android:textSize="@dimen/fontFour" />

    <TextView
        android:id="@+id/fragment_order_detail_deliveryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text=""
        android:textColor="@color/colorGoodsDesc"
        android:textSize="@dimen/fontFour"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/fragment_order_detail_shipping_time_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/shippingTime"
        android:textColor="@color/colorGoodsDesc"
        android:textSize="@dimen/fontFour" />

    <TextView
        android:id="@+id/fragment_order_detail_confirm_time_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/confirmTime"
        android:textColor="@color/colorGoodsDesc"
        android:textSize="@dimen/fontFour" />

    <TextView
        android:id="@+id/fragment_order_detail_pay_type_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/confirmTime"
        android:textColor="@color/colorGoodsDesc"
        android:textSize="@dimen/fontFour" />

    <TextView
        android:id="@+id/fragment_order_detail_invoice_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/invoiceInfo"
        android:textColor="@color/colorGoodsDesc"
        android:textSize="@dimen/fontFour" />

    <TextView
        android:id="@+id/fragment_order_detail_postscript_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/postscript"
        android:textColor="@color/colorGoodsDesc"
        android:textSize="@dimen/fontFour" />

    <TextView
        android:id="@+id/fragment_order_detail_delivery_time_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deliverytime"
        android:textColor="@color/colorGoodsDesc"
        android:textSize="@dimen/fontFour" />

</LinearLayout>